@@ -1,21 +1,22 @@
 package com.javaproject.vacancy_aggregator.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.javaproject.vacancy_aggregator.domain.Company;
-import com.javaproject.vacancy_aggregator.domain.Source;
 import com.javaproject.vacancy_aggregator.domain.Vacancy;
 import com.javaproject.vacancy_aggregator.service.VacancyService;
-import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.data.domain.*;
+import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
+import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -24,7 +25,6 @@ import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@ExtendWith(MockitoExtension.class)
 class VacancyControllerTest {
 
     private MockMvc mockMvc;
@@ -33,100 +33,96 @@ class VacancyControllerTest {
     private VacancyService vacancyService;
 
     @InjectMocks
-    private VacancyController controller;
+    private VacancyController vacancyController;
 
-    private Vacancy sampleVacancy() {
-        Company company = new Company("TestCo");
-        company.setId(1L);
-        Source source = new Source("TestSrc", "http://src");
-        source.setId(2L);
-
-        Vacancy v = new Vacancy(source, company, "Java Developer", "http://vac1");
-        v.setId(42L);
-        v.setCity("Moscow");
-        v.setSalary("100_000");
-        v.setPublicationDate(LocalDateTime.of(2025, 5, 26, 12, 0));
-        return v;
-    }
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @BeforeEach
     void setUp() {
-        mockMvc = MockMvcBuilders
-                .standaloneSetup(controller)
-                .setControllerAdvice() // если есть общий @ControllerAdvice — можно добавить
+        MockitoAnnotations.openMocks(this);
+        mockMvc = MockMvcBuilders.standaloneSetup(vacancyController)
+                .setCustomArgumentResolvers(new PageableHandlerMethodArgumentResolver())
                 .build();
     }
 
     @Test
-    @DisplayName("GET /api/vacancies без параметров возвращает первую страницу по умолчанию")
-    void getVacancies_DefaultPage_ReturnsPage() throws Exception {
-        Vacancy v = sampleVacancy();
-        PageRequest defaultPage = PageRequest.of(0, 20, Sort.by("publicationDate").descending());
-        Page<Vacancy> page = new PageImpl<>(List.of(v), defaultPage, 1);
+    void getVacancies_NoFilters_ReturnsEmptyPage() throws Exception {
+        Pageable defaultPageable = PageRequest.of(0, 50, Sort.by("publicationDate").descending());
+        Page<Vacancy> emptyPage = new PageImpl<>(Collections.emptyList(), defaultPageable, 0);
 
-        when(vacancyService.findAll(isNull(), isNull(), isNull(), eq(defaultPage)))
-                .thenReturn(page);
-
-        mockMvc.perform(get("/api/vacancies"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content.length()").value(1))
-                .andExpect(jsonPath("$.content[0].id").value(42))
-                .andExpect(jsonPath("$.pageable.pageSize").value(20))
-                .andExpect(jsonPath("$.pageable.pageNumber").value(0))
-                .andExpect(jsonPath("$.totalElements").value(1));
-
-        verify(vacancyService).findAll(null, null, null, defaultPage);
-    }
-
-    @Test
-    @DisplayName("GET /api/vacancies с фильтрами и кастомной пагинацией")
-    void getVacancies_WithParamsAndPageable() throws Exception {
-        Vacancy v = sampleVacancy();
-        PageRequest customPage = PageRequest.of(1, 5, Sort.by("publicationDate").ascending());
-        Page<Vacancy> page = new PageImpl<>(List.of(v), customPage, 1);
-
-        when(vacancyService.findAll(eq("Moscow"), eq("TestCo"), eq("100000"), eq(customPage)))
-                .thenReturn(page);
+        when(vacancyService.findAll(
+                any(), any(), any(), any(), any(), any(Pageable.class)))
+                .thenReturn(emptyPage);
 
         mockMvc.perform(get("/api/vacancies")
-                        .param("city", "Moscow")
-                        .param("company", "TestCo")
+                        .param("page", "0")
+                        .param("size", "50")
+                        .param("sort", "publicationDate,desc")
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.content").isArray())
+                .andExpect(jsonPath("$.content").isEmpty())
+                .andExpect(jsonPath("$.totalElements").value(0));
+
+        verify(vacancyService).findAll(
+                isNull(), isNull(), isNull(), isNull(), isNull(),
+                eq(defaultPageable));
+    }
+
+    @Test
+    void getVacancies_WithFilters_ReturnsSingleVacancy() throws Exception {
+        Vacancy vacancy = new Vacancy();
+        vacancy.setId(42L);
+        vacancy.setTitle("Java Developer");
+        vacancy.setCompany(new Company("ACME Corp"));
+        vacancy.setCity("Москва");
+        vacancy.setSalary("120000");
+        vacancy.setPublicationDate(LocalDateTime.of(2025, 6, 5, 10, 0));
+        vacancy.setUrl("https://example.com/vacancy/42");
+        vacancy.setDescription("Ищем Java-разработчика");
+        // employmentType больше не учитывается
+
+        Pageable filteredPageable = PageRequest.of(0, 10, Sort.by("salary").ascending());
+        Page<Vacancy> singlePage = new PageImpl<>(List.of(vacancy), filteredPageable, 1);
+
+        // теперь на четвёртом месте – isNull(), а keyword – пятый
+        when(vacancyService.findAll(
+                eq("Москва"),
+                eq("ACME Corp"),
+                eq("100000"),
+                isNull(),
+                eq("Java"),
+                any(Pageable.class)))
+                .thenReturn(singlePage);
+
+        mockMvc.perform(get("/api/vacancies")
+                        .param("city", "Москва")
+                        .param("company", "ACME Corp")
                         .param("salary", "100000")
-                        .param("page", "1")
-                        .param("size", "5")
-                        .param("sort", "publicationDate,asc")
-                )
+                        // убрали .param("employmentType", ...)
+                        .param("keyword", "Java")
+                        .param("page", "0")
+                        .param("size", "10")
+                        .param("sort", "salary,asc")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content[0].city").value("Moscow"))
-                .andExpect(jsonPath("$.pageable.pageSize").value(5))
-                .andExpect(jsonPath("$.pageable.pageNumber").value(1))
-                .andExpect(jsonPath("$.sort.sorted").value(true));
+                .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.content").isArray())
+                .andExpect(jsonPath("$.content.length()").value(1))
+                .andExpect(jsonPath("$.content[0].id").value(42))
+                .andExpect(jsonPath("$.content[0].title").value("Java Developer"))
+                .andExpect(jsonPath("$.content[0].company").value("ACME Corp"))
+                .andExpect(jsonPath("$.content[0].city").value("Москва"))
+                .andExpect(jsonPath("$.content[0].salary").value("120000"))
+                .andExpect(jsonPath("$.content[0].url").value("https://example.com/vacancy/42"));
 
-        verify(vacancyService).findAll("Moscow", "TestCo", "100000", customPage);
-    }
-
-    @Test
-    @DisplayName("GET /api/vacancies/{id} возвращает DTO, когда есть запись")
-    void getVacancyById_Found() throws Exception {
-        Vacancy v = sampleVacancy();
-        when(vacancyService.findById(42L)).thenReturn(v);
-
-        mockMvc.perform(get("/api/vacancies/42"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(42))
-                .andExpect(jsonPath("$.title").value("Java Developer"))
-                .andExpect(jsonPath("$.company").value("TestCo"));
-
-        verify(vacancyService).findById(42L);
-    }
-
-    @Test
-    @DisplayName("GET /api/vacancies/{id} — 404, если не найдено")
-    void getVacancyById_NotFound() throws Exception {
-        when(vacancyService.findById(99L))
-                .thenThrow(new EntityNotFoundException("Вакансия с таким id не найдена: 99"));
-
-        mockMvc.perform(get("/api/vacancies/99"))
-                .andExpect(status().isNotFound());
+        verify(vacancyService).findAll(
+                eq("Москва"),
+                eq("ACME Corp"),
+                eq("100000"),
+                isNull(),
+                eq("Java"),
+                eq(filteredPageable));
     }
 }
